## This file is a quick tutorial on writing CMakeLists for targeting the Vita
cmake_minimum_required(VERSION 3.16)

## This includes the Vita toolchain, must go before project definition
# It is a convenience so you do not have to type
# -DCMAKE_TOOLCHAIN_FILE=$VITASDK/share/vita.toolchain.cmake for cmake. It is
# highly recommended that you include this block for all projects.
if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  if(DEFINED ENV{VITASDK})
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
  else()
    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
  endif()
endif()

## Define project parameters here
# Name of the project
project(VitaPortsDL)
# This line adds Vita helper macros, must go after project definition in order
# to build Vita specific artifacts (self/vpk).
include("${VITASDK}/share/vita.cmake" REQUIRED)

## Configuration options for this app
# Display name (under bubble in LiveArea)
set(VITA_APP_NAME "PS Vita Data Files Downloader")
# Unique ID must be exactly 9 characters. Recommended: XXXXYYYYY where X =
# unique string of developer and Y = a unique number for this app
set(VITA_TITLEID  "VITAPORTS")
# Optional version string to show in LiveArea's more info screen
set(VITA_VERSION  "01.00")

## Flags and includes for building
# Note that we make sure not to overwrite previous flags
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wl,-q -g -fno-lto")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -std=c++20 -fno-exceptions -fexceptions")
# Optional. You can specify more param.sfo flags this way.
set(VITA_MKSFOEX_FLAGS "${VITA_MKSFOEX_FLAGS} -d PARENTAL_LEVEL=1")
set(VITA_MAKE_FSELF_FLAGS "${VITA_MAKE_FSELF_FLAGS} -a 0x2800000000000001")

find_package(CURL REQUIRED)
find_package(OpenSSL REQUIRED)

# Add any additional include paths here
include_directories(
  ${VITASDK}/arm-vita-eabi/include/luajit-2.1
)

# Add any additional library paths here
# ${CMAKE_CURRENT_BINARY_DIR} lets you use any library currently being built
link_directories(
  ${CMAKE_CURRENT_BINARY_DIR}
)

## Build and link
# Add all the files needed to compile here
add_executable(${PROJECT_NAME}
  src/main.c++
  src/dl.c
)

# Library to link to (drop the -l prefix). This will mostly be stubs.
target_link_libraries(${PROJECT_NAME}
    vita2d
    imgui_vita2d
    ${CURL_LIBRARIES}
    ${OPENSSL_LIBRARIES}
    SceDisplay_stub
    SceGxm_stub
    #SceLibKernel_stub
    #SceSysmodule_stub
    SceCtrl_stub
    SceCamera_stub
    SceCommonDialog_stub
    SceIme_stub
    SceFios2_stub
    SceVshBridge_stub
    SceShellSvc_stub
    SceMusicExport_stub
    ScePhotoExport_stub
    SceVideoExport_stub
    ScePspnetAdhoc_stub
    SceTouch_stub
    SceMotion_stub
    ScePgf_stub
    ScePvf_stub
    SceAppMgr_stub
    SceAppUtil_stub
    ScePromoterUtil_stub
    SceKernelDmacMgr_stub
    SceHttp_stub
    SceSsl_stub
    SceNet_stub
    SceNetCtl_stub
    SceKernelModulemgr_stub
    SceNotificationUtil_stub
    SceScreenShot_stub
    SceShutterSound_stub
    SceRegistryMgr_stub
    ScePower_stub
    SceAudio_stub
    SceAtrac_stub
    SceHid_stub
    SceUdcd_stub
    SceAVConfig_stub
    taihen_stub
    SceSblSsMgr_stub
    png
    jpeg
    freetype
    c
    m
    z
    #k
    bz2
    pthread
)

## Create Vita files
#vita_create_self(safe_eboot.bin ${PROJECT_NAME})
vita_create_self(eboot.bin ${PROJECT_NAME} UNSAFE)
# The FILE directive lets you add additional files to the VPK, the syntax is
# FILE src_path dst_path_in_vpk. In this case, we add the LiveArea paths.
vita_create_vpk(${PROJECT_NAME}.vpk ${VITA_TITLEID} eboot.bin
  VERSION ${VITA_VERSION}
  NAME ${VITA_APP_NAME}
  #FILE sce_sys/icon0.png sce_sys/icon0.png
  #FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
  #FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
  #FILE sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
)
